--- a/src/App.css
+++ b/src/App.css
@@ -51,11 +51,15 @@
 .hero-right-section {
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
     width: 60%;
-    height: 100%;
+    height: 70%;
+    
 }
+.hero-right-section img{
+    width: 100%;
+    height: 100%;
+  }
 
 
 
@@ -124,9 +128,7 @@
   .hero-content {
     align-items: flex-start;
   }
-  .hero-right-section {
-    display: none;
-  }
+
   .hero-left-section {
     width: 100%;
     align-items: flex-start;
@@ -143,5 +145,14 @@
   }
   .hero-left-section h1 {
     font-size: clamp(1.825rem, 5vw, 2rem);
+  }
+}
+
+@media (max-width: 950px) {
+  .hero-right-section{
+    display: none;
+  }
+  .bottom-info{
+    display: none;
   }
 }
