--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -57,6 +57,8 @@
     padding: 10px;
     color: white;
     background: #43424244;
+    opacity: 0.5;
+    border: 1px solid rgb(33, 33, 33);
     clip-path: polygon(0 0, 75% 0, 100% 15%, 100% 100%, 0 100%);
 
   }
@@ -68,12 +70,14 @@
     flex-direction: column;
     justify-content: center;
     height: 100%;
+    opacity: 1 !important;
 }
 .card-icon {
     width: 100%;
     height: 63%;
     margin-bottom: clamp(0.5rem, 1.5vw, 0.75rem);
     border-bottom: 1px solid rgba(57, 57, 57, 1);
+    opacity: 1 !important;
 }
 
 .card-icon svg {
