--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -16,6 +16,7 @@
     margin-bottom: clamp(3rem, 5vw, 4rem);
     width: 100%;
     height: 25%;
+    padding: 0px 0px 25px 0px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -52,15 +53,13 @@
 
 .card {
     position: relative;
-    width: 320px;
-    height: 80%;
+    width: 400px;
+    height: 400px;
     padding: 10px;
     color: white;
     background: #43424244;
-    opacity: 0.5;
     border: 1px solid rgb(33, 33, 33);
     clip-path: polygon(0 0, 75% 0, 100% 15%, 100% 100%, 0 100%);
-
   }
 
   
@@ -78,17 +77,16 @@
     margin-bottom: clamp(0.5rem, 1.5vw, 0.75rem);
     border-bottom: 1px solid rgba(57, 57, 57, 1);
     opacity: 1 !important;
-}
-
-.card-icon svg {
-    width: clamp(24px, 4vw, 32px);
-    height: clamp(24px, 4vw, 32px);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .card-title {
     font-size: clamp(0.875rem, 2vw, 1rem);
     font-weight: 600;
     color: #ffffff;
+    margin-bottom: 10px !important;
     margin: 3px 0 3px 0;
 }
 
@@ -230,9 +228,8 @@
 .carousel-dots {
     display: flex;
     gap: 0.75rem;
-    margin-top: 2rem;
     position: absolute;
-    bottom: -40px;
+    bottom: 3%;
 }
 
 .dot {
@@ -255,6 +252,8 @@
     .cards-container {
         padding: 1rem;
         overflow: hidden;
+        justify-content: flex-start;
+
     }
     
     .cards-grid {
@@ -266,9 +265,15 @@
     }
     
     .cards-header {
-        height: 20%;
-        margin-bottom: 0.5rem;
+        display: grid;
+        height: 13%;
         margin-top: 20px;
+    }
+    .cards-header-title{
+        font-size: clamp(1.5rem, 2vw, 2rem);
+    }
+    .cards-header-subtitle{
+        width: 90%;
     }
     
     .carousel-btn {
@@ -305,9 +310,13 @@
     .cards-grid {
         gap: 1rem;
     }
-    
+    .card{
+        width: 300px;
+        height: 400px;
+    }
     .card-content {
-        padding: 1.25rem;
+        padding: 0.1rem;
+
     }
     
     .cards-header {
@@ -322,11 +331,11 @@
     }
     
     .cards-grid {
-        gap: 2.5rem;
+        gap: 1.5rem;
     }
     
     .card-content {
-        padding: 1.5rem;
+        padding: 1rem;
     }
     
     .cards-header {
@@ -343,11 +352,21 @@
     .cards-grid {
         gap: 2.25rem;
     }
-    
+    .card{
+        width: 400px;
+        height: 600px;
+    }
     .card-content {
         padding: 1.5rem;
     }
     
+.card-title {
+    font-size: clamp(1rem, 2vw, 1.5rem);
+    margin-bottom: 10px;
+}
+.card-description {
+    font-size: clamp(0.75rem, 1.5vw, 1rem);
+}
     .cards-header {
         height: 25%;
     }
