--- a/src/components/Workplace.css
+++ b/src/components/Workplace.css
@@ -1,6 +1,6 @@
 .workplace-container {
     width: 100%;
-    height: 120vh;
+    height: 130vh;
     background-color: #1a1a1a;
 }
 
@@ -23,9 +23,9 @@
     color: #84D04D;
     font-size: clamp(0.2rem, 1.85vw, 1.6rem);
     font-weight: 400;
-    padding: 0px 0px 15px 0px;
+    padding: 0px 0px 25px 0px;
     border-bottom: 2px dashed #84D04D;
-    margin-top: 8rem;
+    margin-top: 10rem;
 }
 
 .workplace-sub-header {
@@ -34,8 +34,8 @@
     justify-content: space-between;
     width: 87%;
     height: 10%;
-    color: #ffffff;
-    font-size: clamp(0.85rem, 2.5vw, 1rem);
+    color: #ccc;
+    font-size: clamp(0.65rem, 2.5vw, 0.85rem);
     font-weight: 400;
     margin-top: 1rem;
     font-family: 'Source Code Pro';
@@ -56,4 +56,31 @@
     width: 100vw;
     max-height: 95%;
     height: auto;
+    position: absolute;
+    bottom: 0;
+    transform: scale(1.2);
+}
+@media (max-width: 499px) {
+    .workplace-container {
+        height: 100vh;
+    }
+    .workplace-content {
+        align-items: center;
+    }
+    .workplace-header{
+        font-size: clamp(0.95rem, 1.8vw, 0.95rem);
+        margin-top: 2rem;
+        padding: 0 !important;
+    }
+    .workplace-sub-header{
+        display: grid;
+        font-size: clamp(0.5rem, 1.8vw, 0.95rem);
+    }
+    .workplace-svg-img {
+        align-items: center;
+        height: 70%;
+    }
+    .workplace-svg-img img{
+        position: relative;
+    }
 }
