--- a/src/App.css
+++ b/src/App.css
@@ -61,9 +61,15 @@
     height: 70%;
     
 }
-.hero-right-section img{
+.hero-right-section img {
     width: 100%;
     height: 100%;
+    object-fit: contain;
+    display: block;
+    max-width: 100%;
+    max-height: 100%;
+    position: relative;
+    z-index: 1;
   }
 
 
