--- a/src/App.css
+++ b/src/App.css
@@ -110,7 +110,7 @@
   
   
   .info-label {
-    font-size: clamp(0.5rem, 0.5rem, 0.5rem);
+    font-size: 10px;
     letter-spacing: 2px;
     text-transform: uppercase;
     color: #a8a8a8;
@@ -118,7 +118,7 @@
   }
   
   .info-value {
-    font-size: clamp(0.5rem, 0.5rem, 0.5rem);
+    font-size: 10px;
     letter-spacing: 2px;
     text-transform: uppercase;
     color: #ffffff;
@@ -144,7 +144,7 @@
     align-items: flex-start;
   }
   .hero-left-section h1 {
-    font-size: clamp(1.25rem, 4vw, 2.25rem);
+    font-size: clamp(1.25rem, 4vw, 2.25rem); 
   }
 }
 
