--- a/src/App.css
+++ b/src/App.css
@@ -59,7 +59,6 @@
     justify-content: center;
     width: 60%;
     height: 70%;
-    
 }
 .hero-right-section img {
     width: 100%;
@@ -70,6 +69,7 @@
     max-height: 100%;
     position: relative;
     z-index: 1;
+    margin-left: 195px;
   }
 
 
