--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -109,7 +109,7 @@
     font-weight: 400;
     color: rgba(118, 118, 118, 1);
     line-height: 1.3;
-    margin-top: 5px;
+    margin: 0;
 }
 
 /* Mobile Carousel Styles */
